# ovirt-engine-kerbldap-migration

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README.md  authz.py  configure.ac  converter.py  ovirt-engine-kerbldap-migration-authz-rename  ovirt-engine-kerbldap-migration-spawn.sh  ovirt-engine-kerbldap-migration-spawn.sh.in  ovirt-engine-kerbldap-migration.spec.in  ovirtexceptions.py  utils.py
ovirt_engine_kerbldap_migration/: Makefile.am
ovirt_engine_kerbldap_migration/authz_rename/: Makefile.am  __main__.py
ovirt_engine_kerbldap_migration/common/: Makefile.am  config.py.in  utils.py
ovirt_engine_kerbldap_migration/tests/: test_profile.py  test_rename.py
ovirt_engine_kerbldap_migration/tool/: Makefile.am  __main__.py
ovirt_engine_kerbldap_migration/tool/tests/: test_profile.py
tests/: test_profile.py
